tests/src/frontend/typechecking/invalid/memo_mut_1.sk
memoized fun no(mutable Ref<Int>): void {
  void
}
